--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/gvsu.png" />
@@ -7,6 +7,9 @@
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
+    <body class="bg-white dark:bg-gray-800">
+      <div>%svelte.body%</div>
+      <div style="display: contents">%sveltekit.body%</div>
+    </body>
   </body>
 </html>
