--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,13 @@
 <html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/gvsu.png" />
-    <meta name="viewport" content="width=device-width" />
+    <link
+      rel="icon"
+      href="https://avatars.githubusercontent.com/u/96762808?s=400&u=0107e40a770aef9f6320916cc52326916fb8d437&v=4"
+      <meta
+      name="viewport"
+      content="width=device-width"
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
