--- a/src/app.html
+++ b/src/app.html
@@ -5,15 +5,11 @@
     <link
       rel="icon"
       href="https://avatars.githubusercontent.com/u/96762808?s=400&u=0107e40a770aef9f6320916cc52326916fb8d437&v=4"
-      <meta
-      name="viewport"
-      content="width=device-width"
     />
+    <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
-    <body class="bg-white dark:bg-gray-800">
-      <div style="display: contents">%sveltekit.body%</div>
-    </body>
+  <body class="bg-white dark:bg-gray-800" data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
